RESOLVED FIXED47188
REGRESSION (r68966?): All dumpAsText test fail on WebKit2
https://bugs.webkit.org/show_bug.cgi?id=47188
Summary REGRESSION (r68966?): All dumpAsText test fail on WebKit2
Adam Roben (:aroben)
Reported 2010-10-05 09:58:35 PDT
All dumpAsText tests started failing on WebKit2 between r68918 and r68977, according to the Windows WebKit2 bot. r68966 seems the most likely culprit. It looks like the failures are due to a missing newline at the end of the dumpAsText output.
Attachments
Adam Roben (:aroben)
Comment 1 2010-10-05 09:59:20 PDT
Anders Carlsson
Comment 2 2010-10-05 11:37:24 PDT
Note You need to log in before you can comment on or make changes to this bug.