REGRESSION (r68966?): All dumpAsText test fail on WebKit2 https://bugs.webkit.org/show_bug.cgi?id=47188 <rdar://problem/8514104>

Reviewed by Sam Weinig.

When constructing the std::string, use the real string length instead of the maximum buffer size.

* TestWebKitAPI/PlatformUtilities.h:
(TestWebKitAPI::Util::toSTD):
* WebKitTestRunner/StringFunctions.h:
(WTR::toSTD):

Canonical link: https://commits.webkit.org/59736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69129 268f45cc-cd09-0410-ab3c-d52691b4dbfc